--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "leaflet": "^1.9.3",
     "next": "13.3.2",
     "postcss": "8.4.23",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3"
   }
 }
