--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.2.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "leaflet": "^1.9.3",
@@ -17,6 +18,7 @@
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.2"
