--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.3.2",
     "leaflet": "^1.9.3",
     "next": "13.3.2",
+    "nextjs-google-analytics": "^2.3.3",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "react": "18.2.0",
