--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "@types/node": "20.3.0"
   }
 }
