Separacao das responsabilidades, inserindo contexto e eventos de alteracao do contexto

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "jsx": "react",
     "checkJs": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   }
 }
