--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/leaflet": "^1.9.3",
     "@types/node": "20.3.0"
   }
