--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "leaflet": "^1.9.3",
+    "material-ui-dropzone": "^3.5.0",
     "next": "13.3.2",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "8.4.23",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.2"
   },
