--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@fontsource/roboto": "^5.0.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.2",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^12.0.4",
+    "eslint-plugin-prettier": "^4.2.1",
     "leaflet": "^1.9.3",
     "material-ui-dropzone": "^3.5.0",
     "next": "13.3.2",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@types/leaflet": "^1.9.3",
-    "@types/node": "20.3.0"
+    "@types/node": "20.3.0",
+    "eslint-config-prettier": "^8.8.0"
   }
 }
