--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
+    "react-rnd": "^10.4.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
