--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
     "react-rnd": "^10.4.1",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
