--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
     "react-rnd": "^10.4.1",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.0",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.0"
   },
@@ -39,6 +41,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/leaflet": "^1.9.3",
     "@types/node": "20.3.0",
+    "@types/sortablejs": "^1.15.1",
     "eslint-config-prettier": "^8.8.0"
   }
 }
