--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"]
+  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error"
+  }
 }
