Ajustando imagem finalizado

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.4.3",
     "leaflet": "^1.9.3",
+    "leaflet-imageoverlay-rotated": "^0.2.1",
     "moment": "^2.29.4",
     "next": "13.3.2",
     "nextjs-google-analytics": "^2.3.3",
@@ -36,7 +37,6 @@
     "react-rnd": "^10.4.1",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
-    "subjx": "^1.1.0",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.0",
     "vis": "^4.21.0-EOL",
