--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
     "eslint": "^8.44.0",
