--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -29,6 +30,7 @@
     "leaflet.timeline": "^1.4.3",
     "moment": "^2.29.4",
     "next": "13.3.2",
+    "next-sitemap": "^4.2.3",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "8.4.31",
     "prettier": "^2.8.8",
