selecionar cor do elemento e atualizações de bibliotecas terra-draw e react-colorful

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
@@ -44,7 +45,7 @@
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
     "tailwindcss": "3.3.2",
-    "terra-draw": "^0.0.1-alpha.48",
+    "terra-draw": "^0.0.1-alpha.63",
     "use-undo": "^1.1.1",
     "uuid": "^9.0.0",
     "vis-timeline": "^7.7.3",
