--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
     "react-rnd": "^10.4.1",
+    "react-shepherd": "^4.3.0",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
     "tailwindcss": "3.3.2",
