--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
     "tailwindcss": "3.3.2",
-    "terra-draw": "^0.0.1-alpha.63",
+    "terra-draw": "^1.0.0-beta.1",
     "use-undo": "^1.1.1",
     "uuid": "^9.0.0",
     "vis-timeline": "^7.7.3",
