--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.1",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.2",
+    "@mui/icons-material": "6.0.0",
+    "@mui/material": "6.0.0",
     "@mui/x-date-pickers": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -22,22 +22,22 @@
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^14.2.13",
     "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.4.3",
     "leaflet": "^1.9.3",
     "leaflet-imageoverlay-rotated": "^0.2.1",
     "leaflet.path.drag": "^0.0.6",
     "moment": "^2.29.4",
-    "next": "13.3.2",
+    "next": "^14.2.13",
     "next-sitemap": "^4.2.3",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "8.4.31",
     "prettier": "^2.8.8",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.7.4",
     "react-colorful": "^5.6.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
     "react-rnd": "^10.4.1",
