--- a/package.json
+++ b/package.json
@@ -10,53 +10,54 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.1",
-    "@mui/icons-material": "6.0.0",
-    "@mui/material": "6.0.0",
-    "@mui/x-date-pickers": "^7.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vercel/analytics": "^1.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@mui/x-date-pickers": "^7.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^14.2.13",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.25",
     "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.4.3",
     "leaflet": "^1.9.3",
     "leaflet-imageoverlay-rotated": "^0.2.1",
     "leaflet.path.drag": "^0.0.6",
     "moment": "^2.29.4",
-    "next": "^14.2.13",
+    "next": "^14.2.25",
     "next-sitemap": "^4.2.3",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "8.4.31",
     "prettier": "^2.8.8",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.10.9",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
+    "react-dropzone": "^14.3.8",
     "react-leaflet": "^4.2.1",
-    "react-rnd": "^10.4.1",
+    "react-rnd": "^10.5.2",
     "react-shepherd": "^4.3.0",
     "react-sortablejs": "^6.1.4",
-    "sortablejs": "^1.15.0",
+    "sortablejs": "^1.15.6",
     "tailwindcss": "3.3.2",
-    "terra-draw": "^1.0.0-beta.1",
+    "terra-draw": "^1.3.0",
+    "terra-draw-leaflet-adapter": "^1.0.3",
     "use-undo": "^1.1.1",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "vis-timeline": "^7.7.3",
-    "yup": "^1.2.0",
-    "zustand": "^4.4.1"
+    "yup": "^1.6.1",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
-    "@types/leaflet": "^1.9.3",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "20.3.0",
     "@types/sortablejs": "^1.15.1",
-    "eslint-config-prettier": "^8.8.0"
+    "eslint-config-prettier": "^8.10.0"
   }
 }
