--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet.path.drag": "^0.0.6",
     "moment": "^2.29.4",
     "next": "^14.2.25",
+    "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "8.4.31",
